Continues the development。
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -28,17 +28,17 @@
 
     <!-- Header -->
     <div class="container" ng-show="showhdr">
-        <form class="form-horizontal" role="form" name="frmObj">
+        <form class="form-horizontal" role="form" name="frmObj" style="margin: 30px, 10px;">
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptID">ID:</label>
+                <label class="control-label col-sm-2" for="iptDocID" translate="Common.ID">ID:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="iptID"
-                           readonly="readonly" placeholder="ID" ng-model="DocumentObject.DocID">
+                    <input type="text" class="form-control" id="iptDocID"
+                           readonly="readonly" placeholder="{{'Common.ID' | translate }}" ng-model="DocumentObject.DocID">
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptDocType">Doc. Type:</label>
+                <label class="control-label col-sm-2" translate="Finance.DocumentType">Doc. Type:</label>
                 <div class="col-sm-10">
                     <ui-select ng-model="DocumentObject.DocTypeObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                         <ui-select-match placeholder="Select a document type via the name...">{{$select.selected.Name}}</ui-select-match>
@@ -54,7 +54,7 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2">Currency:</label>
+                <label class="control-label col-sm-2" translate="Finance.Currency">Currency:</label>
                 <div class="col-sm-10">
                     <ui-select ng-model="DocumentObject.TranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                         <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2">Date</label>
+                <label class="control-label col-sm-2" translate="Common.Date">Date</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
@@ -81,7 +81,7 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptDocAmount">Amount</label>
+                <label class="control-label col-sm-2" for="iptDocAmount" translate="Finance.Amount">Amount</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="iptDocAmount" ng-readonly="isReadonly"
                            placeholder="Amount" ng-model="DocumentObject.TranAmount" required>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptDocDesp">Desp</label>
+                <label class="control-label col-sm-2" for="iptDocDesp" translate="Common.Description">Desp</label>
                 <div class="col-sm-10">
                     <textarea id="iptDocDesp" rows="5" columns="50" ng-readonly="isReadonly" ng-model="DocumentObject.Desp"></textarea>
                 </div>
@@ -103,26 +103,26 @@
 		 	style="width: 100%; height: 500px;"></div>
 
         <!-- Item Detail -->
-        <div class="container">
+        <div class="panel panel-default" style="margin: 30px, 10px;">
             <div>{{ItemActivity | translate}}</div>
             <form class="form-horizontal" role="form" name="frmItem">
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemID">Item ID:</label>
+                    <label class="control-label col-sm-2" for="iptItemID" translate="Finance.ItemID">Item ID:</label>
                     <div class="col-sm-10">
-      					<p class="form-control-static" id="iptItemID">{{SelectedDocumentItem.itemid}}</p>
+      					<p class="form-control-static" id="iptItemID">{{SelectedDocumentItem.ItemID}}</p>
     				</div>
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemAccount">Account:</label>
+                    <label class="control-label col-sm-2" translate="Finance.Account">Account:</label>
                     <div class="col-sm-10">
-                        <ui-select ng-model="SelectedDocumentItem.Account.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                            <ui-select-match placeholder="Select an account via the name...">{{$select.selected.name}}</ui-select-match>
+                        <ui-select ng-model="SelectedDocumentItem.AccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                            <ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
                             <ui-select-choices repeat="acnt in AllAccounts">
-                                <div ng-bind-html="acnt.name | highlight: $select.search"></div>
+                                <div ng-bind-html="acnt.Name | highlight: $select.search"></div>
                                 <small>
-                                    ID: {{acnt.id}} <br />
-                                    Name: <span ng-bind-html="''+acnt.name | highlight: $select.search"></span>
+                                    ID: {{acnt.ID}} <br />
+                                    Name: <span ng-bind-html="''+acnt.Name | highlight: $select.search"></span>
                                 </small>
                             </ui-select-choices>
                         </ui-select>
@@ -130,15 +130,15 @@
                 </div>
                 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptTranType">Transaction Type:</label>
+                    <label class="control-label col-sm-2" translate="Finance.TransactionType">Transaction Type:</label>
                     <div class="col-sm-10">
-                        <ui-select ng-model="SelectedDocumentItem.TranType.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                            <ui-select-match placeholder="Select a type via the name...">{{$select.selected.name}}</ui-select-match>
+                        <ui-select ng-model="SelectedDocumentItem.TranTypeObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                            <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
                             <ui-select-choices repeat="tt in AllTransactionTypes">
-                                <div ng-bind-html="tt.name | highlight: $select.search"></div>
+                                <div ng-bind-html="tt.Name | highlight: $select.search"></div>
                                 <small>
-                                    ID: {{tt.id}} <br />
-                                    Name: <span ng-bind-html="''+tt.name | highlight: $select.search"></span>
+                                    ID: {{tt.ID}} <br />
+                                    Name: <span ng-bind-html="''+tt.Name | highlight: $select.search"></span>
                                 </small>
                             </ui-select-choices>
                         </ui-select>
@@ -146,17 +146,17 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemAmt">Amount:</label>
+                    <label class="control-label col-sm-2" for="iptItemAmt" translate="Finance.Amount">Amount:</label>
                     <div class="col-sm-10">
-                        <input type="text" id="iptItemAmt" ng-readonly="isReadonly" ng-model="SelectedDocumentItem.tranamount"></input>
+                        <input type="text" id="iptItemAmt" ng-readonly="isReadonly" ng-model="SelectedDocumentItem.TranAmount"></input>
                     </div>
                 </div>
                 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemDesp">Desp: </label>
+                    <label class="control-label col-sm-2" for="iptItemDesp" translate="Common.Description">Desp: </label>
                     <div class="col-sm-10">
                         <textarea rows="5" id="iptItemDesp" ng-readonly="isReadonly" cols="50"
-                                    ng-model="SelectedDocumentItem.desp"></textarea>
+                                  ng-model="SelectedDocumentItem.Desp"></textarea>
 			        </div>
 		        </div>
 
