--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -30,7 +30,7 @@
     <div class="container" ng-show="showhdr">
         <form class="form-horizontal" role="form" name="frmObj">
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptID">ID:</label>
+                <label class="control-label col-sm-2" for="iptID" translate="Common.ID">ID:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="iptID"
                            readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="OrderObject.ID">
