Continues the development.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -88,3 +88,5 @@ to prevent collapsing during animation*/
 */
 .accountasset { color: yellowgreen; }
 .accountnotasset { color: firebrick;  }
+.amountcell { text-align: right; }
+
