--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -83,7 +83,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDocAmount" translate="Finance.Amount">Amount</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="iptDocAmount" ng-readonly="isReadonly"
+                    <input type="text" class="form-control" id="iptDocAmount" readonly
                            placeholder="Amount" ng-model="DocumentObject.TranAmount" required>
                 </div>
             </div>
@@ -100,11 +100,13 @@
     <!-- Items -->
     <div class="container" ng-show="!showhdr">
     	<div id="gridFinDocItems" ui-grid="gridOptions" ui-grid-resize-columns
-		 	style="width: 100%; height: 500px;"></div>
+		 	 style="width: 100%; height: 500px;"></div>
 
         <!-- Item Detail -->
         <div class="panel panel-default" style="margin: 30px, 10px;">
-            <div>{{ItemActivity | translate}}</div>
+            <div class="panel-heading">{{ItemActivity | translate}}</div>
+            
+            <div class="panel-body">
             <form class="form-horizontal" role="form" name="frmItem">
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptItemID" translate="Finance.ItemID">Item ID:</label>
@@ -160,6 +162,38 @@
 			        </div>
 		        </div>
 
+                <div class="form-group">
+                    <label class="control-label col-sm-2" translate="Finance.ControlCenter">Control Center</label>
+                    <div class="col-sm-10">
+                        <ui-select ng-model="SelectedDocumentItem.ControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                            <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
+                            <ui-select-choices repeat="cc in AllControlCenters">
+                                <div ng-bind-html="cc.Name | highlight: $select.search"></div>
+                                <small>
+                                    ID: {{cc.ID}} <br />
+                                    Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
+                                </small>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-2" translate="Finance.Order">Order:</label>
+                    <div class="col-sm-10">
+                        <ui-select ng-model="SelectedDocumentItem.OrderObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                            <ui-select-match placeholder="Select an order via the name...">{{$select.selected.Name}}</ui-select-match>
+                            <ui-select-choices repeat="ord in AllOrders">
+                                <div ng-bind-html="ord.Name | highlight: $select.search"></div>
+                                <small>
+                                    ID: {{ord.ID}} <br />
+                                    Name: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
+                                </small>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                </div>
+
                 <!-- Button group -->
                 <div class="form-group">
                 	<div class="col-sm-10">
@@ -169,6 +203,7 @@
                     </div>
                 </div>
             </form>
+            </div>
         </div>
     </div>
 </div>
