Finance Document Posting now back!

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -17,9 +17,9 @@
       <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>11. Finance Account Create.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>12. Finance Account Change.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>13. Finance Account Delete.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>14. Finance Document Create.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>14. Finance Document Create.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>15. Finance Document Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>16. Finance Document Delete.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>16. Finance Document Delete.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>17. Finance Control Center Create.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>18. Finance Control Center Change.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>19. Finance Control Center Delete.</strike></li>
