--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -15,8 +15,7 @@
     <!-- Buttons -->
     <div class="form-group">
     	<div class="col-sm-10">
-        	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-            		ng-disabled="frmObj.$invalid || !frmObj.$dirty || ItemsChanged">Submit</button>
+        	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly">Submit</button>
             <button class="btn btn-danger" ng-click="close()">Cancel</button>
         </div>
     </div>
