Continues the development.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -149,6 +149,11 @@
 								<li class="dropdown-header"><span translate="Finance.Documents">Finance Documents</span></li>
 	                            <li><a ui-sref="home.finance.document.list"><span translate="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.finance.document.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
+								<li role="separator" class="divider"></li>
+	                            <li><a ui-sref="home.finance.report.banlancesheet">Balance Sheet</a></li>
+								<li><a ui-sref="home.finance.report.dailybalance">Daily balance</a></li>
+								<li><a ui-sref="home.finance.report.controlcenter">Control Center Report</a></li>
+								<li><a ui-sref="home.finance.report.dailybalance">Order Report</a></li>
 	                        </ul>
 	                    </li>
 	                    <li class="dropdown" dropdown>
