--- a/app/views/financedocument_currexg.html
+++ b/app/views/financedocument_currexg.html
@@ -1,7 +1,7 @@
 <div id="viewFinanceDocument_CurrExg">
 	<div class="page-header">
 		<h2>
-			<span translate="Finance.Document">Finance Document</span><small> {{Activity | translate}}</small>
+			<span translate="Finance.CurrencyExchangeDocument">Currency Exchange Document</span><small> {{Activity | translate}}</small>
 		</h2>
 	</div>
 	
@@ -12,44 +12,159 @@
         </div>
     </div>
     
+    <!-- Form -->
 	<form class="form-horizontal" role="form" name="frmObj">
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptID" translate="Common.ID">ID:</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" id="iptID"
-						readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="ControlCenterObject.ID">
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptName" translate="Common.Name">Name</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
-						placeholder="{{'Common.Name' | translate}}" ng-model="ControlCenterObject.Name" required>
-			</div>
-		</div>
-		
-	    <div class="form-group">
-        	<label class="control-label col-sm-2" translate="Common.Parent">Parent</label>
+			<label class="control-label col-sm-2" translate="Finance.SourceAccount">Src Account:</label>
             <div class="col-sm-10">
-                <ui-select ng-model="ControlCenterObject.ParentObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                	<ui-select-match placeholder="Select a parent via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="allcc in AllControlCenters">
-                        <div ng-bind-html="allcc.Name | highlight: $select.search"></div>
+                <ui-select ng-model="SourceAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                	<ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="allacnt in AllAccounts">
+                        <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
                         <small>
-                            ID: {{allcc.ID}} <br />
-                            Name: <span ng-bind-html="+allcc.Name | highlight: $select.search"></span>
+                            ID: {{allacnt.ID}} <br />
+                            Name: <span ng-bind-html="+allacnt.Name | highlight: $select.search"></span>
                         </small>
                     </ui-select-choices>
                 </ui-select>
              </div>
-         </div>
+		</div>
+
+		<div class="form-group">
+			<label class="control-label col-sm-2" translate="Finance.TargetAccount">Tgt Account:</label>
+            <div class="col-sm-10">
+                <ui-select ng-model="TargetAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                	<ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="allacnt in AllAccounts">
+                        <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{allacnt.ID}} <br />
+                            Name: <span ng-bind-html="+allacnt.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+             </div>
+		</div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
+            <div class="col-sm-10">
+                <ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="acur in AllCurrencies">
+                        <div ng-bind-html="acur.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{acur.Currency}} <br />
+                            Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Finance.TargetCurrency">Target Currency:</label>
+            <div class="col-sm-10">
+                <ui-select ng-model="TargetTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="acur in AllCurrencies">
+                        <div ng-bind-html="acur.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{acur.Currency}} <br />
+                            Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Common.Date">Date</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
+                        datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="iptAmt" translate="Finance.Amount">Amount:</label>
+            <div class="col-sm-10">
+                <input type="text" id="iptAmt" ng-readonly="isReadonly" ng-model="TranAmount" required></input>
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Finance.SourceControlCenter">Source Control Center </label>
+            <div class="col-sm-10">
+                <ui-select ng-model="SourceControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="scc in AllControlCenters">
+                        <div ng-bind-html="scc.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{scc.ID}} <br />
+                            Name: <span ng-bind-html="''+scc.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Finance.SourceOrder">Source Order:</label>
+            <div class="col-sm-10">
+                <ui-select ng-model="SourceOrderObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select-match placeholder="Select an order via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="sord in AllOrders">
+                        <div ng-bind-html="sord.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{sord.ID}} <br />
+                            Name: <span ng-bind-html="''+sord.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Finance.TargetControlCenter">Target Control Center</label>
+            <div class="col-sm-10">
+                <ui-select ng-model="TargetControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="cc in AllControlCenters">
+                        <div ng-bind-html="cc.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{cc.ID}} <br />
+                            Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Finance.TargetOrder">Target Order:</label>
+            <div class="col-sm-10">
+                <ui-select ng-model="TargetOrderObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                    <ui-select-match placeholder="Select an order via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select-choices repeat="ord in AllOrders">
+                        <div ng-bind-html="ord.Name | highlight: $select.search"></div>
+                        <small>
+                            ID: {{ord.ID}} <br />
+                            Name: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
+                        </small>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptContent" translate="Common.Comment">Comment</label>
+			<label class="control-label col-sm-2" for="iptDesp" translate="Common.Description">Description</label>
 			<div class="col-sm-10">
-				<textarea rows="5" ng-readonly="isReadonly" id="iptContent"
-						ng-model="ControlCenterObject.Comment"></textarea>
+				<textarea rows="5" ng-readonly="isReadonly" id="iptDesp" required
+						ng-model="DocumentObject.Desp"></textarea>
 			</div>
 		</div>
 
