--- a/app/views/financedocument_currexg.html
+++ b/app/views/financedocument_currexg.html
@@ -14,6 +14,17 @@
     
     <!-- Form -->
 	<form class="form-horizontal" role="form" name="frmObj">
+        <div class="form-group">
+            <label class="control-label col-sm-2" translate="Common.Date">Date</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
+                        datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+            </div>
+        </div>        
+        
 		<div class="form-group">
 			<label class="control-label col-sm-2" translate="Finance.SourceAccount">Src Account:</label>
             <div class="col-sm-10">
@@ -78,17 +89,13 @@
             </div>
         </div>
 
+
         <div class="form-group">
-            <label class="control-label col-sm-2" translate="Common.Date">Date</label>
+            <label class="control-label col-sm-2" for="iptAmt" translate="Finance.Amount">Amount:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
-                        datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
-                <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                </span>
+                <input type="text" id="iptAmt" ng-readonly="isReadonly" ng-model="TranAmount" required></input>
             </div>
         </div>
-
         <div class="form-group">
             <label class="control-label col-sm-2" for="iptAmt" translate="Finance.Amount">Amount:</label>
             <div class="col-sm-10">
