Continues the development.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -89,4 +89,5 @@ to prevent collapsing during animation*/
 .accountasset { color: yellowgreen; }
 .accountnotasset { color: firebrick;  }
 .amountcell { text-align: right; }
-
+.trantypeexpense { color: red; font-weight: bold; }
+.trantypenonexpense { color: yellowgreen; font-weight: bold; }
