--- a/app/views/financedocument_currexg.html
+++ b/app/views/financedocument_currexg.html
@@ -46,7 +46,7 @@
                             <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
                             <small>
                                 ID: {{allacnt.ID}} <br />
-                                Name: <span ng-bind-html="+allacnt.Name | highlight: $select.search"></span>
+                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -62,7 +62,7 @@
                             <div ng-bind-html="acur.Name | highlight: $select.search"></div>
                             <small>
                                 ID: {{acur.Currency}} <br />
-                                Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
+                                Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -120,7 +120,7 @@
                             <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
                             <small>
                                 ID: {{allacnt.ID}} <br />
-                                Name: <span ng-bind-html="+allacnt.Name | highlight: $select.search"></span>
+                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -135,7 +135,7 @@
                             <div ng-bind-html="acur.Name | highlight: $select.search"></div>
                             <small>
                                 ID: {{acur.Currency}} <br />
-                                Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
+                                Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
