--- a/app/views/home.html
+++ b/app/views/home.html
@@ -150,9 +150,9 @@
 	                            <li><a ui-sref="home.finance.document.list"><span translate="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.finance.document.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
 								<li role="separator" class="divider"></li>
-	                            <li><a ui-sref="home.finance.report.balancesheet"><span translate="Finance.BalanceReport">Balance Sheet</a></li>
+	                            <li><a ui-sref="home.finance.report.balancesheet"><span translate="Finance.BalanceReport">Balance Sheet</span></a></li>
 								<li><a ui-sref="home.finance.report.dailybalance" ng-disabled="true">Daily balance</a></li>
-								<li><a ui-sref="home.finance.report.controlcenter" ng-disabled="true">Control Center Report</a></li>
+								<li><a ui-sref="home.finance.report.ccbalance"><span translate="Finance.ControlCenterReport">Control Center Report</span></a></li>
 								<li><a ui-sref="home.finance.report.orderbalance"><span translate="Finance.OrderReport">Order Report</span></a></li>
 	                        </ul>
 	                    </li>
