--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -21,8 +21,8 @@
     </div>
 
     <ul class="nav nav-tabs">
-        <li role="presentation" ng-class="showhdr ? 'active' : ''"><a role="button" ng-click="showhdr = true" translate="Finance.DocumentHeader">Header</a></li>
-        <li role="presentation" ng-class="showhdr ? '' : 'active'"><a role="button" ng-click="showhdr = false">Items</a></li>
+        <li role="presentation" ng-class="showhdr ? 'active' : ''"><a role="button" ng-click="showhdr = true"><span translate="Finance.DocumentHeader">Header</span></a></li>
+        <li role="presentation" ng-class="showhdr ? '' : 'active'"><a role="button" ng-click="showhdr = false"><span translate="Finance.DocumentItem">Items</span></a></li>
     </ul>
 
     <!-- Header -->
@@ -45,7 +45,7 @@
                             <div ng-bind-html="doctype.Name | highlight: $select.search"></div>
                             <small>
                                 ID: {{doctype.ID}} <br />
-                                Comment: <span ng-bind-html="+doctype.Comment | highlight: $select.search"></span>
+                                Comment: <span ng-bind-html="''+doctype.Comment | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -61,7 +61,7 @@
                             <div ng-bind-html="acur.Name | highlight: $select.search"></div>
                             <small>
                                 ID: {{acur.Currency}} <br />
-                                Symbol: <span ng-bind-html="+acur.Symbol | highlight: $select.search"></span>
+                                Symbol: <span ng-bind-html="''+acur.Symbol | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -79,11 +79,19 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" ng-if="!isReadonly">
                 <label class="control-label col-sm-2" for="iptDocAmount" translate="Finance.Amount">Amount</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="iptDocAmount" readonly
                            placeholder="Amount" ng-model="DocumentObject.TranAmount" required>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptRefCurrExgDoc" translate="Finance.CurrencyExchange">Currency Exchange</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="iptRefCurrExgDoc" ng-readonly="isReadonly"
+                           placeholder="Ref. Currency Exchange Doc" ng-model="DocumentObject.RefCurrExgDocID">
                 </div>
             </div>
 
@@ -123,8 +131,8 @@
                             <ui-select-choices repeat="acnt in AllAccounts">
                                 <div ng-bind-html="acnt.Name | highlight: $select.search"></div>
                                 <small>
-                                    ID: {{acnt.ID}} <br />
-                                    Name: <span ng-bind-html="''+acnt.Name | highlight: $select.search"></span>
+                                    {{'Common.ID' | translate}}: {{acnt.ID}} <br />
+                                    {{'Common.Name' | translate}}: <span ng-bind-html="''+acnt.Name | highlight: $select.search"></span>
                                 </small>
                             </ui-select-choices>
                         </ui-select>
@@ -137,10 +145,10 @@
                         <ui-select ng-model="SelectedDocumentItem.TranTypeObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                             <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
                             <ui-select-choices repeat="tt in AllTransactionTypes">
-                                <div ng-bind-html="tt.Name | highlight: $select.search"></div>
+                                <div ng-class="{trantypeexpense: tt.ExpenseFlag, trantypenonexpense: !tt.ExpenseFlag}" ng-bind-html="tt.Name | highlight: $select.search"></div>
                                 <small>
-                                    ID: {{tt.ID}} <br />
-                                    Name: <span ng-bind-html="''+tt.Name | highlight: $select.search"></span>
+                                    {{'Common.ID' | translate}}: {{tt.ID}} <br />
+                                    {{'Common.Name' | translate}}: <span ng-bind-html="''+tt.FullDisplayName | highlight: $select.search"></span>
                                 </small>
                             </ui-select-choices>
                         </ui-select>
@@ -170,8 +178,8 @@
                             <ui-select-choices repeat="cc in AllControlCenters">
                                 <div ng-bind-html="cc.Name | highlight: $select.search"></div>
                                 <small>
-                                    ID: {{cc.ID}} <br />
-                                    Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
+                                    {{'Common.ID' | translate}}: {{cc.ID}} <br />
+                                    {{'Common.Name' | translate}}: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
                                 </small>
                             </ui-select-choices>
                         </ui-select>
@@ -186,8 +194,8 @@
                             <ui-select-choices repeat="ord in AllOrders">
                                 <div ng-bind-html="ord.Name | highlight: $select.search"></div>
                                 <small>
-                                    ID: {{ord.ID}} <br />
-                                    Name: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
+                                    {{'Common.ID' | translate}}: {{ord.ID}} <br />
+                                    {{'Common.Name' | translate}}: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
                                 </small>
                             </ui-select-choices>
                         </ui-select>
