--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -16,7 +16,7 @@
     <div class="form-group">
     	<div class="col-sm-10">
         	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-            		ng-disabled="frmObj.$invalid || !frmObj.$dirty || ItemsChanged">Submit</button>
+            		ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
             <button class="btn btn-danger" ng-click="close()">Cancel</button>
         </div>
     </div>
