Continues the development.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,45 +1,8 @@
 <div ng-controller="AboutController">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading">Issues so far (Importantance is the Number):</div>
+    <div class="panel-heading">About H.I.H.</div>
 
-    <ul class="list-group">
-      <li class="list-group-item list-group-item-info"><span class="badge">3</span>1. Empty content in TinyMCE?</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>2. Learn Category Combo: Hierarchy or adding leading blanks?</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>3. Learn Object Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>4. Learn History Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>5. Learn Award Create.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>6. Learn Award Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>7. Learn Award Delete.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">1</span><strike>8. Default Template instead of real 'default'?</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">2</span>9. Current Template marked in the menu 'Themes'.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">2</span>10. Current Language marked in the menu 'Languages'.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>11. Finance Account Create.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>12. Finance Account Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>13. Finance Account Delete.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>14. Finance Document Create.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>15. Finance Document Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>16. Finance Document Delete.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>17. Finance Control Center Create.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>18. Finance Control Center Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>19. Finance Control Center Delete.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>20. Finance Internal Order Create.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>21. Finance Internal Order Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>22. Finance Internal Order Delete.</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">1</span>23. Random chose the theme during the start?</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span>24. Deletion confirm dialog's language!</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>25. Learn History List Refresh!</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>26. Learn Award List Refresh!</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>27. Learn Object List Refresh!</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>28. Average score in Learn Award!</strike></li>
-      <li class="list-group-item list-group-item-danger"><span class="badge">5</span>29. The sorting in UI-Grid now working because they are all string!</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>30. Finance Control Center List Refresh!</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>31. Finance Control Center Hierarchy Refresh!</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>32. Finance Order List Refresh!</strike></li>
-      <li class="list-group-item list-group-item-danger"><span class="badge">3</span>Others</li>
-    </ul>
-  </div>
-  
   <!--<div style="height: 605px">
     <carousel interval="myInterval">
       <slide ng-repeat="slide in slides" active="slide.active">
