--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -87,11 +87,20 @@
                 </div>
             </div>
             
+
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptRefCurrExgDoc" translate="Finance.CurrencyExchange">Currency Exchange</label>
+                <label class="control-label col-sm-2" translate="Finance.CurrencyExchangeDocument">Currency Exchange:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="iptRefCurrExgDoc" ng-readonly="isReadonly"
-                           placeholder="Ref. Currency Exchange Doc" ng-model="DocumentObject.RefCurrExgDocID">
+                    <ui-select ng-model="RefCurrExgDocObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a document via the desp...">{{$select.selected.Desp}}</ui-select-match>
+                        <ui-select-choices repeat="adoc in arFinanceCurrencyExchangeDocument">
+                            <div ng-bind-html="adoc.DocID | highlight: $select.search"></div>
+                            <small>
+                                ID: {{adoc.DocID}} <br />
+                                Symbol: <span ng-bind-html="''+adoc.Desp | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
                 </div>
             </div>
 
