--- a/app/views/financedocument_currexg.html
+++ b/app/views/financedocument_currexg.html
@@ -34,25 +34,17 @@
 						ng-model="DocumentObject.Desp"></input>
 			</div>
 		</div>
+
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
+			<div class="col-sm-10">
+				<input type="text" ng-readonly="isReadonly" id="iptExgRate" required class="form-control"
+						ng-model="DocumentObject.ExchangeRate"></input>
+			</div>
+		</div>
         
         <!-- Source part -->
         <div class="col-lg-6">
-            <div class="form-group">
-                <label class="control-label col-sm-2" translate="Finance.SourceAccount">Src Account:</label>
-                <div class="col-sm-10">
-                    <ui-select ng-model="SourceAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                        <ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
-                        <ui-select-choices repeat="allacnt in AllAccounts">
-                            <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
-                            <small>
-                                ID: {{allacnt.ID}} <br />
-                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
-                            </small>
-                        </ui-select-choices>
-                    </ui-select>
-                </div>
-            </div>
-            
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
                 <div class="col-sm-10">
@@ -68,11 +60,27 @@
                     </ui-select>
                 </div>
             </div>
-            
+
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptSAmt" translate="Finance.Amount">Source Amount:</label>
                 <div class="col-sm-10">
                     <input type="text" id="iptSAmt" class="form-control" ng-readonly="isReadonly" ng-model="SourceTranAmount" required></input>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.SourceAccount">Src Account:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="SourceAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="allacnt in AllAccounts">
+                            <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{allacnt.ID}} <br />
+                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
                 </div>
             </div>
             
@@ -112,21 +120,6 @@
         <!-- Target part -->
         <div class="col-lg-6">
             <div class="form-group">
-                <label class="control-label col-sm-2" translate="Finance.TargetAccount">Tgt Account:</label>
-                <div class="col-sm-10">
-                    <ui-select ng-model="TargetAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                        <ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
-                        <ui-select-choices repeat="allacnt in AllAccounts">
-                            <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
-                            <small>
-                                ID: {{allacnt.ID}} <br />
-                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
-                            </small>
-                        </ui-select-choices>
-                    </ui-select>
-                </div>
-            </div>
-            <div class="form-group">
                 <label class="control-label col-sm-2" translate="Finance.TargetCurrency">Target Currency:</label>
                 <div class="col-sm-10">
                     <ui-select ng-model="TargetTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
@@ -143,11 +136,27 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptTAmt" translate="Finance.TargetAmount">Amount:</label>
+                <label class="control-label col-sm-2" for="iptTAmt" translate="Finance.Amount">Amount:</label>
                 <div class="col-sm-10">
                     <input type="text" id="iptTAmt" class="form-control" ng-readonly="isReadonly" ng-model="TargetTranAmount" required></input>
                 </div>
             </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.TargetAccount">Tgt Account:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="TargetAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="allacnt in AllAccounts">
+                            <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{allacnt.ID}} <br />
+                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>            
             
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Finance.TargetControlCenter">Target Control Center</label>
